git-svn-id: http://svn.codehaus.org/xstream/trunk@2272 9830eeb5-ddf4-0310-9ef7-f4b9a3e3227e