@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2006, 2007, 2008, 2010, 2011, 2013 XStream Committers.
+ * Copyright (C) 2006, 2007, 2008, 2010, 2011, 2013, 2014 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -9,6 +9,21 @@
  * Created on 13. April 2006 by Joerg Schaible
  */
 package com.thoughtworks.xstream.converters.reflection;
+
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationHandler;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.lang.reflect.Modifier;
+import java.lang.reflect.Proxy;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 
 import com.thoughtworks.xstream.converters.ConversionException;
 import com.thoughtworks.xstream.converters.MarshallingContext;
@@ -27,25 +42,10 @@ import net.sf.cglib.proxy.Factory;
 import net.sf.cglib.proxy.MethodInterceptor;
 import net.sf.cglib.proxy.NoOp;
 
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.lang.reflect.Proxy;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
-
 
 /**
- * Converts a proxy created by the CGLIB {@link Enhancer}. Such a proxy is recreated while
- * deserializing the proxy. The converter does only work, if<br>
+ * Converts a proxy created by the CGLIB {@link Enhancer}. Such a proxy is recreated while deserializing the proxy. The
+ * converter does only work, if<br>
  * <ul>
  * <li>the DefaultNamingPolicy is used for the proxy's name</li>
  * <li>the proxy uses a factory or only one Callback is registered</li>
@@ -59,71 +59,78 @@ import java.util.Set;
 public class CGLIBEnhancedConverter extends SerializableConverter {
     private static String DEFAULT_NAMING_MARKER = "$$EnhancerByCGLIB$$";
     private static String CALLBACK_MARKER = "CGLIB$CALLBACK_";
-    private transient Map fieldCache;
+    private transient Map<String, List<Field>> fieldCache;
 
     /**
      * Construct a CGLIBEnhancedConverter.
+     * 
      * @param mapper the mapper chain instance
      * @param reflectionProvider the reflection provider
      * @param classLoaderReference the reference to the {@link ClassLoader} of the XStream instance
      * @since 1.4.5
      */
-    public CGLIBEnhancedConverter(Mapper mapper, ReflectionProvider reflectionProvider, ClassLoaderReference classLoaderReference) {
+    public CGLIBEnhancedConverter(
+            final Mapper mapper, final ReflectionProvider reflectionProvider,
+            final ClassLoaderReference classLoaderReference) {
         super(mapper, new CGLIBFilteringReflectionProvider(reflectionProvider), classLoaderReference);
-        this.fieldCache = new HashMap();
+        fieldCache = new HashMap<String, List<Field>>();
     }
 
     /**
      * @deprecated As of 1.4.5 use {@link #CGLIBEnhancedConverter(Mapper, ReflectionProvider, ClassLoaderReference)}
      */
-    public CGLIBEnhancedConverter(Mapper mapper, ReflectionProvider reflectionProvider, ClassLoader classLoader) {
+    @Deprecated
+    public CGLIBEnhancedConverter(
+            final Mapper mapper, final ReflectionProvider reflectionProvider, final ClassLoader classLoader) {
         super(mapper, new CGLIBFilteringReflectionProvider(reflectionProvider), classLoader);
-        this.fieldCache = new HashMap();
+        fieldCache = new HashMap<String, List<Field>>();
     }
 
     /**
      * @deprecated As of 1.4 use {@link #CGLIBEnhancedConverter(Mapper, ReflectionProvider, ClassLoaderReference)}
      */
-    public CGLIBEnhancedConverter(Mapper mapper, ReflectionProvider reflectionProvider) {
-        this(mapper, new CGLIBFilteringReflectionProvider(reflectionProvider), CGLIBEnhancedConverter.class.getClassLoader());
+    @Deprecated
+    public CGLIBEnhancedConverter(final Mapper mapper, final ReflectionProvider reflectionProvider) {
+        this(mapper, new CGLIBFilteringReflectionProvider(reflectionProvider), CGLIBEnhancedConverter.class
+            .getClassLoader());
     }
 
-    public boolean canConvert(Class type) {
-        return (Enhancer.isEnhanced(type) && type.getName().indexOf(DEFAULT_NAMING_MARKER) > 0)
+    @Override
+    public boolean canConvert(final Class<?> type) {
+        return Enhancer.isEnhanced(type)
+            && type.getName().indexOf(DEFAULT_NAMING_MARKER) > 0
             || type == CGLIBMapper.Marker.class;
     }
 
-    public void marshal(Object source, HierarchicalStreamWriter writer,
-        MarshallingContext context) {
-        Class type = source.getClass();
-        boolean hasFactory = Factory.class.isAssignableFrom(type);
+    @Override
+    public void marshal(final Object source, final HierarchicalStreamWriter writer, final MarshallingContext context) {
+        final Class<?> type = source.getClass();
+        final boolean hasFactory = Factory.class.isAssignableFrom(type);
         ExtendedHierarchicalStreamWriterHelper.startNode(writer, "type", type);
         context.convertAnother(type.getSuperclass());
         writer.endNode();
         writer.startNode("interfaces");
-        Class[] interfaces = type.getInterfaces();
-        for (int i = 0; i < interfaces.length; i++ ) {
-            if (interfaces[i] == Factory.class) {
+        final Class<?>[] interfaces = type.getInterfaces();
+        for (final Class<?> interface1 : interfaces) {
+            if (interface1 == Factory.class) {
                 continue;
             }
-            ExtendedHierarchicalStreamWriterHelper.startNode(writer, mapper
-                .serializedClass(interfaces[i].getClass()), interfaces[i].getClass());
-            context.convertAnother(interfaces[i]);
+            ExtendedHierarchicalStreamWriterHelper.startNode(writer, mapper.serializedClass(interface1.getClass()),
+                interface1.getClass());
+            context.convertAnother(interface1);
             writer.endNode();
         }
         writer.endNode();
         writer.startNode("hasFactory");
         writer.setValue(String.valueOf(hasFactory));
         writer.endNode();
-        Map callbackIndexMap = null;
-        Callback[] callbacks = hasFactory
-            ? ((Factory)source).getCallbacks()
-            : getCallbacks(source);
+        Map<?, ?> callbackIndexMap = null;
+        final Callback[] callbacks = hasFactory ? ((Factory)source).getCallbacks() : getCallbacks(source);
         if (callbacks.length > 1) {
             if (hasFactory) {
                 callbackIndexMap = createCallbackIndexMap((Factory)source);
             } else {
-                ConversionException exception = new ConversionException(
+                final ConversionException exception = new ConversionException(
                     "Cannot handle CGLIB enhanced proxies without factory that have multiple callbacks");
                 exception.add("proxy superclass", type.getSuperclass().getName());
                 exception.add("number of callbacks", String.valueOf(callbacks.length));
@@ -135,17 +142,15 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
             writer.endNode();
         }
         boolean hasInterceptor = false;
-        for (int i = 0; i < callbacks.length; i++ ) {
-            final Callback callback = callbacks[i];
+        for (final Callback callback : callbacks) {
             if (callback == null) {
-                String name = mapper.serializedClass(null);
+                final String name = mapper.serializedClass(null);
                 writer.startNode(name);
                 writer.endNode();
             } else {
-                hasInterceptor = hasInterceptor
-                    || MethodInterceptor.class.isAssignableFrom(callback.getClass());
-                ExtendedHierarchicalStreamWriterHelper.startNode(writer, mapper
-                    .serializedClass(callback.getClass()), callback.getClass());
+                hasInterceptor = hasInterceptor || MethodInterceptor.class.isAssignableFrom(callback.getClass());
+                ExtendedHierarchicalStreamWriterHelper.startNode(writer, mapper.serializedClass(callback.getClass()),
+                    callback.getClass());
                 context.convertAnother(callback);
                 writer.endNode();
             }
@@ -158,17 +163,14 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
             if (!field.isAccessible()) {
                 field.setAccessible(true);
             }
-            long serialVersionUID = field.getLong(null);
-            ExtendedHierarchicalStreamWriterHelper.startNode(
-                writer, "serialVersionUID", String.class);
+            final long serialVersionUID = field.getLong(null);
+            ExtendedHierarchicalStreamWriterHelper.startNode(writer, "serialVersionUID", String.class);
             writer.setValue(String.valueOf(serialVersionUID));
             writer.endNode();
-        } catch (NoSuchFieldException e) {
+        } catch (final NoSuchFieldException e) {
             // OK, ignore
-        } catch (IllegalAccessException e) {
-            throw new ObjectAccessException("Access to serialVersionUID of "
-                + type.getName()
-                + " not allowed", e);
+        } catch (final IllegalAccessException e) {
+            throw new ObjectAccessException("Access to serialVersionUID of " + type.getName() + " not allowed", e);
         }
         if (hasInterceptor) {
             writer.startNode("instance");
@@ -177,31 +179,31 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         }
     }
 
-    private Callback[] getCallbacks(Object source) {
-        Class type = source.getClass();
-        List fields = (List)fieldCache.get(type.getName());
+    private Callback[] getCallbacks(final Object source) {
+        final Class<?> type = source.getClass();
+        List<Field> fields = fieldCache.get(type.getName());
         if (fields == null) {
-            fields = new ArrayList();
+            fields = new ArrayList<Field>();
             fieldCache.put(type.getName(), fields);
             for (int i = 0; true; ++i) {
                 try {
-                    Field field = type.getDeclaredField(CALLBACK_MARKER + i);
+                    final Field field = type.getDeclaredField(CALLBACK_MARKER + i);
                     if (!field.isAccessible()) {
                         field.setAccessible(true);
                     }
                     fields.add(field);
-                } catch (NoSuchFieldException e) {
+                } catch (final NoSuchFieldException e) {
                     break;
                 }
             }
         }
-        List list = new ArrayList();
+        final List<Callback> list = new ArrayList<Callback>();
         for (int i = 0; i < fields.size(); ++i) {
             try {
-                Field field = (Field)fields.get(i);
-                Object callback = field.get(source);
+                final Field field = fields.get(i);
+                final Callback callback = (Callback)field.get(source);
                 list.add(callback);
-            } catch (IllegalAccessException e) {
+            } catch (final IllegalAccessException e) {
                 throw new ObjectAccessException("Access to "
                     + type.getName()
                     + "."
@@ -210,45 +212,45 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
                     + " not allowed", e);
             }
         }
-        return (Callback[])list.toArray(new Callback[list.size()]);
+        return list.toArray(new Callback[list.size()]);
     }
 
-    private Map createCallbackIndexMap(Factory source) {
-        Callback[] originalCallbacks = source.getCallbacks();
-        Callback[] reverseEngineeringCallbacks = new Callback[originalCallbacks.length];
-        Map callbackIndexMap = new HashMap();
+    private Map<? super Object, ? super Object> createCallbackIndexMap(final Factory source) {
+        final Callback[] originalCallbacks = source.getCallbacks();
+        final Callback[] reverseEngineeringCallbacks = new Callback[originalCallbacks.length];
+        final Map<? super Object, ? super Object> callbackIndexMap = new HashMap<Object, Object>();
         int idxNoOp = -1;
-        for (int i = 0; i < originalCallbacks.length; i++ ) {
-            Callback callback = originalCallbacks[i];
+        for (int i = 0; i < originalCallbacks.length; i++) {
+            final Callback callback = originalCallbacks[i];
             if (callback == null) {
                 reverseEngineeringCallbacks[i] = null;
             } else if (NoOp.class.isAssignableFrom(callback.getClass())) {
                 reverseEngineeringCallbacks[i] = NoOp.INSTANCE;
                 idxNoOp = i;
             } else {
-                reverseEngineeringCallbacks[i] = createReverseEngineeredCallbackOfProperType(
-                    callback, i, callbackIndexMap);
+                reverseEngineeringCallbacks[i] = createReverseEngineeredCallbackOfProperType(callback, i,
+                    callbackIndexMap);
             }
         }
 
         try {
             source.setCallbacks(reverseEngineeringCallbacks);
-            final Set interfaces = new HashSet();
-            final Set methods = new HashSet();
-            Class type = source.getClass();
+            final Set<Class<?>> interfaces = new HashSet<Class<?>>();
+            final Set<Method> methods = new HashSet<Method>();
+            Class<?> type = source.getClass();
             do {
                 methods.addAll(Arrays.asList(type.getDeclaredMethods()));
                 methods.addAll(Arrays.asList(type.getMethods()));
-                Class[] implementedInterfaces = type.getInterfaces();
+                final Class<?>[] implementedInterfaces = type.getInterfaces();
                 interfaces.addAll(Arrays.asList(implementedInterfaces));
                 type = type.getSuperclass();
             } while (type != null);
-            for (final Iterator iterator = interfaces.iterator(); iterator.hasNext();) {
-                type = (Class)iterator.next();
+            for (final Iterator<Class<?>> iterator = interfaces.iterator(); iterator.hasNext();) {
+                type = iterator.next();
                 methods.addAll(Arrays.asList(type.getDeclaredMethods()));
             }
-            for (final Iterator iter = methods.iterator(); iter.hasNext();) {
-                final Method method = (Method)iter.next();
+            for (final Iterator<Method> iter = methods.iterator(); iter.hasNext();) {
+                final Method method = iter.next();
                 if (!method.isAccessible()) {
                     method.setAccessible(true);
                 }
@@ -257,25 +259,22 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
                     iter.remove();
                     continue;
                 }
-                Class[] parameterTypes = method.getParameterTypes();
+                final Class<?>[] parameterTypes = method.getParameterTypes();
                 Method calledMethod = method;
                 try {
                     if ((method.getModifiers() & Modifier.ABSTRACT) > 0) {
-                        calledMethod = source.getClass().getMethod(
-                            method.getName(), method.getParameterTypes());
+                        calledMethod = source.getClass().getMethod(method.getName(), method.getParameterTypes());
                     }
                     callbackIndexMap.put(null, method);
                     calledMethod.invoke(source, parameterTypes == null
                         ? (Object[])null
                         : createNullArguments(parameterTypes));
-                } catch (IllegalAccessException e) {
-                    throw new ObjectAccessException("Access to "
-                        + calledMethod
-                        + " not allowed", e);
-                } catch (InvocationTargetException e) {
+                } catch (final IllegalAccessException e) {
+                    throw new ObjectAccessException("Access to " + calledMethod + " not allowed", e);
+                } catch (final InvocationTargetException e) {
                     // OK, ignore
-                } catch (NoSuchMethodException e) {
-                    ConversionException exception = new ConversionException(
+                } catch (final NoSuchMethodException e) {
+                    final ConversionException exception = new ConversionException(
                         "CGLIB enhanced proxies wit abstract nethod that has not been implemented");
                     exception.add("proxy superclass", type.getSuperclass().getName());
                     exception.add("method", method.toString());
@@ -286,9 +285,9 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
                 }
             }
             if (idxNoOp >= 0) {
-                Integer idx = new Integer(idxNoOp);
-                for (final Iterator iter = methods.iterator(); iter.hasNext();) {
-                    callbackIndexMap.put(iter.next(), idx);
+                final Integer idx = Integer.valueOf(idxNoOp);
+                for (final Method method : methods) {
+                    callbackIndexMap.put(method, idx);
                 }
             }
         } finally {
@@ -299,10 +298,10 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         return callbackIndexMap;
     }
 
-    private Object[] createNullArguments(Class[] parameterTypes) {
-        Object[] arguments = new Object[parameterTypes.length];
-        for (int i = 0; i < arguments.length; i++ ) {
-            Class type = parameterTypes[i];
+    private Object[] createNullArguments(final Class<?>[] parameterTypes) {
+        final Object[] arguments = new Object[parameterTypes.length];
+        for (int i = 0; i < arguments.length; i++) {
+            final Class<?> type = parameterTypes[i];
             if (type.isPrimitive()) {
                 if (type == byte.class) {
                     arguments[i] = new Byte((byte)0);
@@ -326,16 +325,15 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         return arguments;
     }
 
-    private Callback createReverseEngineeredCallbackOfProperType(Callback callback, int index,
-        Map callbackIndexMap) {
-        Class iface = null;
-        Class[] interfaces = callback.getClass().getInterfaces();
-        for (int i = 0; i < interfaces.length; i++ ) {
+    private Callback createReverseEngineeredCallbackOfProperType(final Callback callback, final int index,
+            final Map<? super Object, ? super Object> callbackIndexMap) {
+        Class<?> iface = null;
+        Class<?>[] interfaces = callback.getClass().getInterfaces();
+        for (int i = 0; i < interfaces.length; i++) {
             if (Callback.class.isAssignableFrom(interfaces[i])) {
                 iface = interfaces[i];
                 if (iface == Callback.class) {
-                    ConversionException exception = new ConversionException(
-                        "Cannot handle CGLIB callback");
+                    final ConversionException exception = new ConversionException("Cannot handle CGLIB callback");
                     exception.add("CGLIB callback type", callback.getClass().getName());
                     throw exception;
                 }
@@ -346,38 +344,39 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
                 i = -1;
             }
         }
-        return (Callback)Proxy.newProxyInstance(
-            iface.getClassLoader(), new Class[]{iface},
+        return (Callback)Proxy.newProxyInstance(iface.getClassLoader(), new Class[]{iface},
             new ReverseEngineeringInvocationHandler(index, callbackIndexMap));
     }
 
-    public Object unmarshal(HierarchicalStreamReader reader, UnmarshallingContext context) {
+    @Override
+    public Object unmarshal(final HierarchicalStreamReader reader, final UnmarshallingContext context) {
         final Enhancer enhancer = new Enhancer();
         reader.moveDown();
-        enhancer.setSuperclass((Class)context.convertAnother(null, Class.class));
+        enhancer.setSuperclass((Class<?>)context.convertAnother(null, Class.class));
         reader.moveUp();
         reader.moveDown();
-        List interfaces = new ArrayList();
+        final List<Class<?>> interfaces = new ArrayList<Class<?>>();
         while (reader.hasMoreChildren()) {
             reader.moveDown();
-            interfaces
-                .add(context.convertAnother(null, mapper.realClass(reader.getNodeName())));
+            interfaces.add((Class<?>)context.convertAnother(null, mapper.realClass(reader.getNodeName())));
             reader.moveUp();
         }
-        enhancer.setInterfaces((Class[])interfaces.toArray(new Class[interfaces.size()]));
+        enhancer.setInterfaces(interfaces.toArray(new Class[interfaces.size()]));
         reader.moveUp();
         reader.moveDown();
-        boolean useFactory = Boolean.valueOf(reader.getValue()).booleanValue();
+        final boolean useFactory = Boolean.valueOf(reader.getValue()).booleanValue();
         enhancer.setUseFactory(useFactory);
         reader.moveUp();
 
-        List callbacksToEnhance = new ArrayList();
-        List callbacks = new ArrayList();
-        Map callbackIndexMap = null;
+        final List<Callback> callbacksToEnhance = new ArrayList<Callback>();
+        final List<Callback> callbacks = new ArrayList<Callback>();
+        Map<Method, Integer> callbackIndexMap = null;
         reader.moveDown();
         if ("callbacks".equals(reader.getNodeName())) {
             reader.moveDown();
-            callbackIndexMap = (Map)context.convertAnother(null, HashMap.class);
+            @SuppressWarnings("unchecked")
+            final Map<Method, Integer> typedMap = (Map<Method, Integer>)context.convertAnother(null, HashMap.class);
+            callbackIndexMap = typedMap;
             reader.moveUp();
             while (reader.hasMoreChildren()) {
                 reader.moveDown();
@@ -387,8 +386,7 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         } else {
             readCallback(reader, context, callbacksToEnhance, callbacks);
         }
-        enhancer.setCallbacks((Callback[])callbacksToEnhance
-            .toArray(new Callback[callbacksToEnhance.size()]));
+        enhancer.setCallbacks(callbacksToEnhance.toArray(new Callback[callbacksToEnhance.size()]));
         if (callbackIndexMap != null) {
             enhancer.setCallbackFilter(new ReverseEngineeredCallbackFilter(callbackIndexMap));
         }
@@ -410,10 +408,9 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         return serializationMethodInvoker.callReadResolve(result);
     }
 
-    private void readCallback(HierarchicalStreamReader reader, UnmarshallingContext context,
-        List callbacksToEnhance, List callbacks) {
-        Callback callback = (Callback)context.convertAnother(null, mapper.realClass(reader
-            .getNodeName()));
+    private void readCallback(final HierarchicalStreamReader reader, final UnmarshallingContext context,
+            final List<Callback> callbacksToEnhance, final List<Callback> callbacks) {
+        final Callback callback = (Callback)context.convertAnother(null, mapper.realClass(reader.getNodeName()));
         callbacks.add(callback);
         if (callback == null) {
             callbacksToEnhance.add(NoOp.INSTANCE);
@@ -422,24 +419,24 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
         }
     }
 
-    private Object create(final Enhancer enhancer, List callbacks, boolean useFactory) {
-        Object result = enhancer.create();
+    private Object create(final Enhancer enhancer, final List<Callback> callbacks, final boolean useFactory) {
+        final Object result = enhancer.create();
         if (useFactory) {
-            ((Factory)result).setCallbacks((Callback[])callbacks.toArray(new Callback[callbacks
-                .size()]));
+            ((Factory)result).setCallbacks(callbacks.toArray(new Callback[callbacks.size()]));
         }
         return result;
     }
 
-    protected List hierarchyFor(Class type) {
-        List typeHierarchy = super.hierarchyFor(type);
+    @Override
+    protected List<Class<?>> hierarchyFor(final Class<?> type) {
+        final List<Class<?>> typeHierarchy = super.hierarchyFor(type);
         // drop the CGLIB proxy
         typeHierarchy.remove(typeHierarchy.size() - 1);
         return typeHierarchy;
     }
 
     private Object readResolve() {
-        fieldCache = new HashMap();
+        fieldCache = new HashMap<String, List<Field>>();
         return this;
     }
 
@@ -449,9 +446,11 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
             super(reflectionProvider);
         }
 
+        @Override
         public void visitSerializableFields(final Object object, final Visitor visitor) {
             wrapped.visitSerializableFields(object, new Visitor() {
-                public void visit(String name, Class type, Class definedIn, Object value) {
+                @Override
+                public void visit(final String name, final Class<?> type, final Class<?> definedIn, final Object value) {
                     if (!name.startsWith("CGLIB$")) {
                         visitor.visit(name, type, definedIn, value);
                     }
@@ -462,14 +461,15 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
 
     private static final class ReverseEngineeringInvocationHandler implements InvocationHandler {
         private final Integer index;
-        private final Map indexMap;
+        private final Map<? super Object, ? super Object> indexMap;
 
-        public ReverseEngineeringInvocationHandler(int index, Map indexMap) {
+        public ReverseEngineeringInvocationHandler(final int index, final Map<? super Object, ? super Object> indexMap) {
             this.indexMap = indexMap;
-            this.index = new Integer(index);
+            this.index = Integer.valueOf(index);
         }
 
-        public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+        @Override
+        public Object invoke(final Object proxy, final Method method, final Object[] args) throws Throwable {
             indexMap.put(indexMap.get(null), index);
             return null;
         }
@@ -477,20 +477,21 @@ public class CGLIBEnhancedConverter extends SerializableConverter {
 
     private static class ReverseEngineeredCallbackFilter implements CallbackFilter {
 
-        private final Map callbackIndexMap;
+        private final Map<Method, Integer> callbackIndexMap;
 
-        public ReverseEngineeredCallbackFilter(Map callbackIndexMap) {
+        public ReverseEngineeredCallbackFilter(final Map<Method, Integer> callbackIndexMap) {
             this.callbackIndexMap = callbackIndexMap;
         }
 
-        public int accept(Method method) {
+        @Override
+        public int accept(final Method method) {
             if (!callbackIndexMap.containsKey(method)) {
-                ConversionException exception = new ConversionException(
+                final ConversionException exception = new ConversionException(
                     "CGLIB callback not detected in reverse engineering");
                 exception.add("CGLIB callback", method.toString());
                 throw exception;
             }
-            return ((Integer)callbackIndexMap.get(method)).intValue();
+            return callbackIndexMap.get(method).intValue();
         }
 
     }
