@@ -12,8 +12,8 @@
 package com.thoughtworks.xstream.converters.reflection;
 
 import java.lang.reflect.Field;
+import java.util.HashMap;
 import java.util.Map;
-import java.util.WeakHashMap;
 
 
 /**
@@ -36,7 +36,7 @@ import java.util.WeakHashMap;
 public class SunUnsafeReflectionProvider extends SunLimitedUnsafeReflectionProvider {
 
     // references to the Field key are kept in the FieldDictionary
-    private transient Map fieldOffsetCache;
+    private transient Map<Field, Long> fieldOffsetCache;
 
     /**
      * @since 1.4.7
@@ -48,22 +48,23 @@ public class SunUnsafeReflectionProvider extends SunLimitedUnsafeReflectionProvi
     /**
      * @since 1.4.7
      */
-    public SunUnsafeReflectionProvider(FieldDictionary dic) {
+    public SunUnsafeReflectionProvider(final FieldDictionary dic) {
         super(dic);
     }
 
-    public void writeField(Object object, String fieldName, Object value, Class definedIn) {
+    @Override
+    public void writeField(final Object object, final String fieldName, final Object value, final Class<?> definedIn) {
         write(fieldDictionary.field(object.getClass(), fieldName, definedIn), object, value);
     }
 
-    private void write(Field field, Object object, Object value) {
+    private void write(final Field field, final Object object, final Object value) {
         if (exception != null) {
             throw new ObjectAccessException("Could not set field " + object.getClass() + "." + field.getName(),
                 exception);
         }
         try {
-            long offset = getFieldOffset(field);
-            Class type = field.getType();
+            final long offset = getFieldOffset(field);
+            final Class<?> type = field.getType();
             if (type.isPrimitive()) {
                 if (type.equals(Integer.TYPE)) {
                     unsafe.putInt(object, offset, ((Integer)value).intValue());
@@ -93,15 +94,15 @@ public class SunUnsafeReflectionProvider extends SunLimitedUnsafeReflectionProvi
                 unsafe.putObject(object, offset, value);
             }
 
-        } catch (IllegalArgumentException e) {
+        } catch (final IllegalArgumentException e) {
             throw new ObjectAccessException("Could not set field " + object.getClass() + "." + field.getName(), e);
         }
     }
 
-    private synchronized long getFieldOffset(Field f) {
-        Long l = (Long)fieldOffsetCache.get(f);
+    private synchronized long getFieldOffset(final Field f) {
+        Long l = fieldOffsetCache.get(f);
         if (l == null) {
-            l = new Long(unsafe.objectFieldOffset(f));
+            l = Long.valueOf(unsafe.objectFieldOffset(f));
             fieldOffsetCache.put(f, l);
         }
 
@@ -113,8 +114,9 @@ public class SunUnsafeReflectionProvider extends SunLimitedUnsafeReflectionProvi
         return this;
     }
 
+    @Override
     protected void init() {
         super.init();
-        fieldOffsetCache = new WeakHashMap();
+        fieldOffsetCache = new HashMap<Field, Long>();
     }
 }
