@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2004, 2005 Joe Walnes.
- * Copyright (C) 2006, 2007 XStream Committers.
+ * Copyright (C) 2006, 2007, 2014 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -14,21 +14,24 @@ package com.thoughtworks.xstream.core.util;
 import java.io.IOException;
 import java.io.ObjectOutput;
 import java.io.ObjectOutputStream;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 import com.thoughtworks.xstream.converters.ConversionException;
 import com.thoughtworks.xstream.converters.DataHolder;
 
+
 public class CustomObjectOutputStream extends ObjectOutputStream {
 
-    private FastStack callbacks = new FastStack(1);
-    private FastStack customFields = new FastStack(1);
+    private final FastStack<StreamCallback> callbacks = new FastStack<StreamCallback>(1);
+    private final FastStack<CustomPutField> customFields = new FastStack<CustomPutField>(1);
 
     private static final String DATA_HOLDER_KEY = CustomObjectOutputStream.class.getName();
 
-    public static synchronized CustomObjectOutputStream getInstance(DataHolder whereFrom, StreamCallback callback) {
+    public static synchronized CustomObjectOutputStream getInstance(final DataHolder whereFrom,
+            final StreamCallback callback) {
         try {
-            CustomObjectOutputStream result = (CustomObjectOutputStream) whereFrom.get(DATA_HOLDER_KEY);
+            CustomObjectOutputStream result = (CustomObjectOutputStream)whereFrom.get(DATA_HOLDER_KEY);
             if (result == null) {
                 result = new CustomObjectOutputStream(callback);
                 whereFrom.put(DATA_HOLDER_KEY, result);
@@ -36,192 +39,230 @@ public class CustomObjectOutputStream extends ObjectOutputStream {
                 result.pushCallback(callback);
             }
             return result;
-        } catch (IOException e) {
+        } catch (final IOException e) {
             throw new ConversionException("Cannot create CustomObjectStream", e);
         }
     }
 
     public static interface StreamCallback {
         void writeToStream(Object object) throws IOException;
-        void writeFieldsToStream(Map fields) throws IOException;
+
+        void writeFieldsToStream(Map<String, Object> fields) throws IOException;
+
         void defaultWriteObject() throws IOException;
+
         void flush() throws IOException;
+
         void close() throws IOException;
     }
 
     /**
-     * Warning, this object is expensive to create (due to functionality inherited from superclass).
-     * Use the static fetch() method instead, wherever possible.
-     *
-     * @see #getInstance(com.thoughtworks.xstream.converters.DataHolder, com.thoughtworks.xstream.core.util.CustomObjectOutputStream.StreamCallback)
+     * Warning, this object is expensive to create (due to functionality inherited from superclass). Use the static
+     * fetch() method instead, wherever possible.
+     * 
+     * @see #getInstance(com.thoughtworks.xstream.converters.DataHolder,
+     *      com.thoughtworks.xstream.core.util.CustomObjectOutputStream.StreamCallback)
      */
-    public CustomObjectOutputStream(StreamCallback callback) throws IOException, SecurityException {
-        this.callbacks.push(callback);
+    public CustomObjectOutputStream(final StreamCallback callback) throws IOException, SecurityException {
+        callbacks.push(callback);
     }
 
     /**
      * Allows the CustomObjectOutputStream (which is expensive to create) to be reused.
      */
-    public void pushCallback(StreamCallback callback) {
-        this.callbacks.push(callback);
+    public void pushCallback(final StreamCallback callback) {
+        callbacks.push(callback);
     }
-    
-    public StreamCallback popCallback(){
-        return (StreamCallback) this.callbacks.pop();
+
+    public StreamCallback popCallback() {
+        return callbacks.pop();
     }
-    
-    public StreamCallback peekCallback(){
-        return (StreamCallback) this.callbacks.peek();
+
+    public StreamCallback peekCallback() {
+        return callbacks.peek();
     }
-    
+
     /*** Methods to delegate to callback ***/
 
+    @Override
     public void defaultWriteObject() throws IOException {
         peekCallback().defaultWriteObject();
     }
 
-    protected void writeObjectOverride(Object obj) throws IOException {
+    @Override
+    protected void writeObjectOverride(final Object obj) throws IOException {
         peekCallback().writeToStream(obj);
     }
 
-    public void writeBoolean(boolean val) throws IOException {
-        peekCallback().writeToStream(val ? Boolean.TRUE : Boolean.FALSE); // JDK 1.3 friendly
+    @Override
+    public void writeBoolean(final boolean val) throws IOException {
+        peekCallback().writeToStream(Boolean.valueOf(val));
     }
 
-    public void writeByte(int val) throws IOException {
-        peekCallback().writeToStream(new Byte((byte) val));
+    @Override
+    public void writeByte(final int val) throws IOException {
+        peekCallback().writeToStream(Byte.valueOf((byte)val));
     }
 
-    public void writeInt(int val) throws IOException {
-        peekCallback().writeToStream(new Integer(val));
+    @Override
+    public void writeInt(final int val) throws IOException {
+        peekCallback().writeToStream(Integer.valueOf(val));
     }
 
-    public void writeChar(int val) throws IOException {
-        peekCallback().writeToStream(new Character((char)val));
+    @Override
+    public void writeChar(final int val) throws IOException {
+        peekCallback().writeToStream(Character.valueOf((char)val));
     }
 
-    public void writeDouble(double val) throws IOException {
-        peekCallback().writeToStream(new Double(val));
+    @Override
+    public void writeDouble(final double val) throws IOException {
+        peekCallback().writeToStream(Double.valueOf(val));
     }
 
-    public void writeFloat(float val) throws IOException {
-        peekCallback().writeToStream(new Float(val));
+    @Override
+    public void writeFloat(final float val) throws IOException {
+        peekCallback().writeToStream(Float.valueOf(val));
     }
 
-    public void writeLong(long val) throws IOException {
-        peekCallback().writeToStream(new Long(val));
+    @Override
+    public void writeLong(final long val) throws IOException {
+        peekCallback().writeToStream(Long.valueOf(val));
     }
 
-    public void writeShort(int val) throws IOException {
-        peekCallback().writeToStream(new Short((short) val));
+    @Override
+    public void writeShort(final int val) throws IOException {
+        peekCallback().writeToStream(Short.valueOf((short)val));
     }
 
-    public void write(byte[] buf) throws IOException {
+    @Override
+    public void write(final byte[] buf) throws IOException {
         peekCallback().writeToStream(buf);
     }
 
-    public void writeChars(String str) throws IOException {
+    @Override
+    public void writeChars(final String str) throws IOException {
         peekCallback().writeToStream(str.toCharArray());
     }
 
-    public void writeUTF(String str) throws IOException {
+    @Override
+    public void writeUTF(final String str) throws IOException {
         peekCallback().writeToStream(str);
     }
 
-    public void write(int val) throws IOException {
-        peekCallback().writeToStream(new Byte((byte) val));
+    @Override
+    public void write(final int val) throws IOException {
+        peekCallback().writeToStream(Byte.valueOf((byte)val));
     }
 
-    public void write(byte[] buf, int off, int len) throws IOException {
-        byte[] b = new byte[len];
+    @Override
+    public void write(final byte[] buf, final int off, final int len) throws IOException {
+        final byte[] b = new byte[len];
         System.arraycopy(buf, off, b, 0, len);
         peekCallback().writeToStream(b);
     }
 
+    @Override
     public void flush() throws IOException {
         peekCallback().flush();
     }
 
+    @Override
     public void close() throws IOException {
         peekCallback().close();
     }
 
+    @Override
     public PutField putFields() {
-        CustomPutField result = new CustomPutField();
+        final CustomPutField result = new CustomPutField();
         customFields.push(result);
         return result;
     }
 
+    @Override
     public void writeFields() throws IOException {
-        CustomPutField customPutField = (CustomPutField) customFields.pop();
+        final CustomPutField customPutField = customFields.pop();
         peekCallback().writeFieldsToStream(customPutField.asMap());
     }
 
     private class CustomPutField extends PutField {
 
-        private final Map fields = new OrderRetainingMap();
+        private final Map<String, Object> fields = new LinkedHashMap<String, Object>();
 
-        public Map asMap() {
+        public Map<String, Object> asMap() {
             return fields;
         }
 
-        public void write(ObjectOutput out) throws IOException {
+        @Override
+        public void write(final ObjectOutput out) throws IOException {
             peekCallback().writeToStream(asMap());
         }
 
-        public void put(String name, Object val) {
+        @Override
+        public void put(final String name, final Object val) {
             fields.put(name, val);
         }
 
-        public void put(String name, byte val) {
-            put(name, new Byte(val));
+        @Override
+        public void put(final String name, final byte val) {
+            put(name, Byte.valueOf(val));
         }
 
-        public void put(String name, char val) {
-            put(name, new Character(val));
+        @Override
+        public void put(final String name, final char val) {
+            put(name, Character.valueOf(val));
         }
 
-        public void put(String name, double val) {
-            put(name, new Double(val));
+        @Override
+        public void put(final String name, final double val) {
+            put(name, Double.valueOf(val));
         }
 
-        public void put(String name, float val) {
-            put(name, new Float(val));
+        @Override
+        public void put(final String name, final float val) {
+            put(name, Float.valueOf(val));
         }
 
-        public void put(String name, int val) {
-            put(name, new Integer(val));
+        @Override
+        public void put(final String name, final int val) {
+            put(name, Integer.valueOf(val));
         }
 
-        public void put(String name, long val) {
-            put(name, new Long(val));
+        @Override
+        public void put(final String name, final long val) {
+            put(name, Long.valueOf(val));
         }
 
-        public void put(String name, short val) {
-            put(name, new Short(val));
+        @Override
+        public void put(final String name, final short val) {
+            put(name, Short.valueOf(val));
         }
 
-        public void put(String name, boolean val) {
-            put(name, val ? Boolean.TRUE : Boolean.FALSE); // JDK 1.3 friendly
+        @Override
+        public void put(final String name, final boolean val) {
+            put(name, Boolean.valueOf(val));
         }
 
     }
 
     /****** Unsupported methods ******/
 
+    @Override
     public void reset() {
         throw new UnsupportedOperationException();
     }
 
-    public void useProtocolVersion(int version) {
+    @Override
+    public void useProtocolVersion(final int version) {
         throw new UnsupportedOperationException();
     }
 
-    public void writeBytes(String str) {
+    @Override
+    public void writeBytes(final String str) {
         throw new UnsupportedOperationException();
     }
 
-    public void writeUnshared(Object obj) {
+    @Override
+    public void writeUnshared(final Object obj) {
         throw new UnsupportedOperationException();
     }
 
