@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2006 Joe Walnes.
- * Copyright (C) 2007, 2008 XStream Committers.
+ * Copyright (C) 2007, 2008, 2014 XStream Committers.
  * All rights reserved.
  *
  * The software in this package is published under the terms of the BSD
@@ -14,43 +14,47 @@ package com.thoughtworks.xstream.persistence;
 import java.util.AbstractSet;
 import java.util.Iterator;
 
+
 /**
  * A persistent set implementation.
  * 
  * @author Guilherme Silveira
  */
-public class XmlSet extends AbstractSet {
+public class XmlSet<V> extends AbstractSet<V> {
 
-	private final XmlMap map;
+    private final XmlMap<Long, V> map;
 
-	public XmlSet(PersistenceStrategy persistenceStrategy) {
-		this.map = new XmlMap(persistenceStrategy);
-	}
+    public XmlSet(final PersistenceStrategy<Long, V> persistenceStrategy) {
+        this.map = new XmlMap<Long, V>(persistenceStrategy);
+    }
 
-	public Iterator iterator() {
-		return map.values().iterator();
-	}
+    @Override
+    public Iterator<V> iterator() {
+        return map.values().iterator();
+    }
 
-	public int size() {
-		return map.size();
-	}
+    @Override
+    public int size() {
+        return map.size();
+    }
 
-	public boolean add(Object o) {
-		if (map.containsValue(o)) {
-			return false;
-		} else {
-			// not-synchronized!
-			map.put(findEmptyKey(), o);
-			return true;
-		}
-	}
+    @Override
+    public boolean add(final V o) {
+        if (map.containsValue(o)) {
+            return false;
+        } else {
+            // not-synchronized!
+            map.put(findEmptyKey(), o);
+            return true;
+        }
+    }
 
-	private Long findEmptyKey() {
-		long i = System.currentTimeMillis();
-		while (map.containsKey(new Long(i))) {
-			i++;
-		}
-		return new Long(i);
-	}
+    private Long findEmptyKey() {
+        long i = System.currentTimeMillis();
+        while (map.containsKey(Long.valueOf(i))) {
+            i++;
+        }
+        return Long.valueOf(i);
+    }
 
 }
